--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 </head>
 <body>
 <div class="wrapper">
+    <section class="content">
+        <aside class="left">
 
+        </aside>
+        <aside class="center">
+
+        </aside>
+    </section>
 </div>
 </body>
 </html>
