--- a/singolo1.html
+++ b/singolo1.html
@@ -23,8 +23,8 @@
 	<section class="sliderblocks">
 		<div class="blockin">
 			<div class="slider">
-				<img src="images/slider_img1.png" class="sliderimg slider-img1" alt="">
-				<img src="images/slider_img2.png" class="sliderimg slider-img2" alt="">
+				<img src="assets/images/slider_img1.png" class="sliderimg slider-img1" alt="">
+				<img src="assets/images/slider_img2.png" class="sliderimg slider-img2" alt="">
 				<div class="slidernav">
 					<div class="nav_left"></div>
 					<div class="nav_right"></div>
@@ -40,42 +40,42 @@
 			</p>
 			<div class="our_services_blocks">
 				<div class="our_block">
-					<img src="images/our1.png" alt="">
+					<img src="assets/images/our1.png" alt="">
 					<div class="our_block-right">
 						<h2>Custom Design</h2>
 						Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
 					</div>
 				</div>
 				<div class="our_block">
-					<img src="images/our2.png" alt="">
+					<img src="assets/images/our2.png" alt="">
 					<div class="our_block-right">
 						<h2>Inovative Ideas</h2>
 						Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
 					</div>
 				</div>
 				<div class="our_block">
-					<img src="images/our3.png" alt="">
+					<img src="assets/images/our3.png" alt="">
 					<div class="our_block-right">
 						<h2>Love Is The Answer</h2>
 						Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
 					</div>
 				</div>
 				<div class="our_block">
-					<img src="images/our4.png" alt="">
+					<img src="assets/images/our4.png" alt="">
 					<div class="our_block-right">
 						<h2>Responsive Layout</h2>
 						Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
 					</div>
 				</div>
 				<div class="our_block">
-					<img src="images/our5.png" alt="">
+					<img src="assets/images/our5.png" alt="">
 					<div class="our_block-right">
 						<h2>24 / 7 Support</h2>
 						Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .
 					</div>
 				</div>
 				<div class="our_block">
-					<img src="images/our6.png" alt="">
+					<img src="assets/images/our6.png" alt="">
 					<div class="our_block-right">
 						<h2>Feel Like A Star</h2>
 						Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
