Сorrected the mistake

--- a/singolo2.html
+++ b/singolo2.html
@@ -19,18 +19,18 @@
 				<li>Artwork</li>
 			</ul>
 			<div class="portfolio-wrap">
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio1.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio2.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio3.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio4.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio5.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio6.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio7.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio8.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio9.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio10.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio11.jpg" alt=""></div>
-				<div class="portfolio-block"><img src="../singolo/assets/images/portfolio12.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio1.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio2.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio3.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio4.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio5.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio6.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio7.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio8.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio9.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio10.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio11.jpg" alt=""></div>
+				<div class="portfolio-block"><img src="assets/images/portfolio12.jpg" alt=""></div>
 			</div>
 		</div>
 	</section>
@@ -42,36 +42,36 @@
 			</p>
 			<div class="aboutus-wrap">
 				<div class="aboutus-block">
-					<img src="../singolo/assets/images/about_us1.jpg" alt="">
+					<img src="assets/images/about_us1.jpg" alt="">
 					<h3>Adam Jensen</h3>
 					Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
 					<div class="social">
-						<a href="#"><img src="../singolo/assets/images/soc1.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc2.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc3.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc4.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc1.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc2.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc3.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc4.png" alt=""></a>
 					</div>
 				</div>
 				<div class="aboutus-block">
-					<img src="../singolo/assets/images/about_us2.jpg" alt="">
+					<img src="assets/images/about_us2.jpg" alt="">
 					<h3>Desmond Miles</h3>
 					Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
 					<div class="social">
-						<a href="#"><img src="../singolo/assets/images/soc1.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc2.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc3.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc4.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc1.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc2.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc3.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc4.png" alt=""></a>
 					</div>
 				</div>
 				<div class="aboutus-block">
-					<img src="../singolo/assets/images/about_us3.jpg" alt="">
+					<img src="assets/images/about_us3.jpg" alt="">
 					<h3>Scolara Visari</h3>
 					Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
 					<div class="social">
-						<a href="#"><img src="../singolo/assets/images/soc1.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc2.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc3.png" alt=""></a>
-						<a href="#"><img src="../singolo/assets/images/soc4.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc1.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc2.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc3.png" alt=""></a>
+						<a href="#"><img src="assets/images/soc4.png" alt=""></a>
 					</div>
 				</div>
 			</div>
